# pacview

./: .gitignore  Cargo.toml  build.rs  com.github.PacView.desktop  com.github.PacView.gresource.xml  com.github.PacView.gschema.xml  compile-gresource.bash  filterlistboxrow.ui  mainwindow.ui  make-release.bash  pacview.py  pkgcolumnview.ui  pkgview.py  sidebarlistboxrow.ui  style.css
app/: com.github.PacView.gresource  object_types.py  objects.py  pacview.py
data/: com.github.PacView.desktop  com.github.PacView.gschema.xml
gtk/: help-overlay.ui
resources/: com.github.PacView.gresource.xml  style.css
resources/gtk/: help-overlay.ui
resources/ui/: config_dialog.ui  info_files_tab.ui  log_window.ui  mainwindow.ui  pkgcolumnview.ui  pkgdetailswindow.ui  pkginfopane.ui  preferences_dialog.ui  prefswindow.ui  search_bar.ui  searchheader.ui  searchtag.ui  sidebarlistboxrow.ui  source_window.ui  stacktogglebutton.ui  stats_window.ui  statswindow.ui  text_widget.ui  window.ui
resources/ui/backup_window/: item.ui
resources/ui/columnview/: repository-item.ui  version-item.ui
resources/ui/details/: backup-item.ui  backup-mod-item.ui  cache-item.ui  log-item.ui
resources/ui/groups_window/: item.ui
resources/ui/infopane/: name-item.ui
resources/ui/log_window/: date_item.ui  time_item.ui
resources/ui/package_view/: header.ui
resources/ui/stats/: installed-item.ui  packages-item.ui  repository-item.ui  size-item.ui
resources/ui/stats_window/: packages_item.ui
src/: app.rs  aur.rs  backup_dialog.rs  backup_object.rs  backup_window.rs  cache_object.rs  cache_window.rs  config_dialog.rs  config_row.rs  config_window.rs  details_dialog.rs  details_window.rs  enum_traits.rs  filter_row.rs  groups_object.rs  groups_window.rs  hash_window.rs  history_list.rs  info_backup_tab.rs  info_cache_tab.rs  info_details_tab.rs  info_files_tab.rs  info_log_tab.rs  info_pane.rs  info_row.rs  info_value.rs  log_dialog.rs  log_object.rs  log_window.rs  main.rs  package_item.rs  package_view.rs  pkg_data.rs  pkg_history.rs  pkg_object.rs  pkgobject.rs  pkgproperty.rs  preferences_dialog.rs  preferences_window.rs  prop_object.rs  (+24 more)
src/resources/: resources.gresource.xml  shortcuts-dialog.ui  style.css
src/resources/gtk/: help-overlay.ui
src/resources/ui/: backup_dialog.ui  backup_window.ui  cache_window.ui  config_dialog.ui  config_row.ui  config_window.ui  details_dialog.ui  details_window.ui  filter_row.ui  groups_window.ui  hash_window.ui  info_backup_tab.ui  info_cache_tab.ui  info_details_tab.ui  info_files_tab.ui  info_log_tab.ui  info_pane.ui  info_row.ui  info_value.ui  log_dialog.ui  log_window.ui  package_item.ui  package_view.ui  package_view_menu.ui  preferences_dialog.ui  preferences_window.ui  prop_value_widget.ui  property_label.ui  property_value.ui  search_bar.ui  search_header.ui  search_tag.ui  sidebar_item_indicator.ui  source_window.ui  stats_dialog.ui  stats_window.ui  status_item_indicator.ui  text_layout.ui  text_widget.ui  toggle_button.ui  (+2 more)
src/resources/ui/backup_dialog/: dropdown_item.ui  section_header.ui
src/resources/ui/backup_window/: backup_item.ui  file_item.ui  filename_item.ui  header.ui  item.ui  package_item.ui  section_header.ui  section_item.ui  status_item.ui
src/resources/ui/cache_window/: cache_item.ui  item.ui
src/resources/ui/columnview/: size-item.ui
src/resources/ui/details_window/: backup_item.ui  cache_item.ui  log_item.ui  tree_item.ui
src/resources/ui/groups_window/: header.ui  item.ui  package_item.ui  section_header.ui  status_item.ui
src/resources/ui/info_pane/: backup_file_item.ui  backup_item.ui  backup_status_item.ui  cache_item.ui  file_item.ui  log_item.ui
src/resources/ui/infopane/: label-item.ui  label_item.ui
src/resources/ui/log_dialog/: date_item.ui  message_item.ui
src/resources/ui/log_window/: category_item.ui  time_item.ui
src/resources/ui/package_view/: date_item.ui  groups_item.ui  header.ui  package_item.ui  repository_item.ui  size_item.ui  status_item.ui  version_item.ui
src/resources/ui/pkgview/: package-item.ui  repository-item.ui  repository_item.ui  status-item.ui  version-item.ui
src/resources/ui/stats_dialog/: packages_item.ui
src/resources/ui/stats_window/: explicit_item.ui  installed_item.ui  packages_item.ui  repository_item.ui  size_item.ui
src/resources/ui/status_item/: indicator.ui
ui/: column-date-item.ui  column-date.ui  column-group.ui  column-size-item.ui  column-size.ui  column-status-item.ui  column-status.ui  column-version-item.ui  details-cache-item.ui  details-log-item.ui  file-item.ui  mainwindow.ui  pkgcolumnview.ui  pkgdetailswindow.ui  pkginfogrid.ui  pkginfopane.ui  pkginfoview.ui  prefswindow.ui  property-name-item.ui  property-value-item.ui  searchheader.ui  searchtag.ui  sidebarlistboxrow.ui  statswindow.ui  updatewindow.ui  vtogglebutton.ui
ui/columnview/: status-item.ui  updateversion-item.ui  version-item.ui
ui/details/: backup-file-item.ui  backup-mod-item.ui  cache-item.ui  file-item.ui  log-item.ui
ui/infopane/: name-item.ui
ui/stats/: count-item.ui
