[package]
name = "pacview"
version = "3.22.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.8", package = "libadwaita", features = ["v1_8"] }
alpm = "5"
alpm-utils = "5"
async-channel = "2"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
async-process = "2"
fancy-regex = "0.17"
futures = "0.3"
futures-util = "0.3"
gtk = { version = "0.10", package = "gtk4", features = ["v4_20"] }
heck = "0.5"
itertools = "0.14.0"
notify-debouncer-full = "0.6"
pacmanconf = "3"
pangocairo = "0.21"
raur = "7"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["stream"] }
size = "0.5"
sourceview5 = { version = "0.10", features = ["v5_18"] }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"
url = "2"
which = "8"

[build-dependencies]
glib-build-tools = "0.21"

[lints.clippy]
# NURSERY
# nursery = { level = "warn", priority = -1 }

# future_not_send = "allow"
# missing_const_for_fn = "allow"

# PEDANTIC
# pedantic = { level = "warn", priority = -1 }

# wildcard_imports = "allow"
# cast_sign_loss = "allow"
# if_not_else = "allow"
# too_many_lines = "allow"
# cast_possible_truncation = "allow"
# cast_precision_loss = "allow"
# items_after_statements = "allow"
# float_cmp = "allow"
# needless_pass_by_value = "allow"

# RESTRICTION
# arithmetic_side_effects = "warn"
# clone_on_ref_ptr = "warn"
# create_dir = "warn"
# empty_enum_variants_with_brackets = "warn"
# empty_structs_with_brackets = "warn"
# float_arithmetic = "warn"
# float_cmp_const = "warn"
# get_unwrap = "warn"
# if_then_some_else_none = "warn"
# implicit_clone = "warn"
# indexing_slicing = "warn"
# integer_division = "warn"
# integer_division_remainder_used = "warn"
# iter_over_hash_type = "warn"
# lossy_float_literal = "warn"
# mixed_read_write_in_expression = "warn"
# mutex_atomic = "warn"
# mutex_integer = "warn"
# non_ascii_literal = "warn"
# non_zero_suggestions = "warn"
# pathbuf_init_then_push = "warn"
# pattern_type_mismatch = "warn"
# rc_buffer = "warn"
# rc_mutex = "warn"
# redundant_type_annotations = "warn"
# return_and_then = "warn"
# semicolon_inside_block = "warn"
# str_to_string = "warn"
# string_slice = "warn"
# unneeded_field_pattern = "warn"
